--- a/vaultsolver.html
+++ b/vaultsolver.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- This is where I added the webpage title -->
     <title>Vault Solver - Bob The Great</title>
 </head>
 <body>
     <h1 style="text-align: center;"> Vault - Block07 - Robert Yohnka</h1>
     <h3 style="text-align: center;"> Wear your gloves!!! </h3>
+<!-- This is the link to the javascript file -->
     <script src="./vaultsolver.js"></script>
 </body>
 </html>
